--- a/presentation/2d.tex
+++ b/presentation/2d.tex
@@ -152,8 +152,10 @@
   \end{table}
   \vspace{.2cm}
 
-  The hybrid method remains effective at improving control rod worth estimates in the full-core
+  \begin{itemize}
+    \item The hybrid method remains effective at improving control rod worth estimates in the full-core
   model.
+  \end{itemize}
 \end{frame}
 
 \begin{frame}
