--- a/presentation/cnrs.tex
+++ b/presentation/cnrs.tex
@@ -3,6 +3,8 @@
 
   Published in \textit{S.M. Park, M. Munk, "Verification of Moltres for Multiphysics Simulations of
     Fast-Spectrum Molten Salt Reactors," Annals of Nuclear Energy, vol. 173, Aug 2022.}
+  \vspace{.2cm}
+
   \begin{columns}
     \column[t]{6.5cm}
     \textbf{Description of the CNRS Benchmark \cite{tiberga_results_2020}}
