--- a/presentation/control-rod.tex
+++ b/presentation/control-rod.tex
@@ -73,6 +73,7 @@
       \begin{itemize}
         \item Neutronics mesh differs from thermal-hydraulics mesh
         \item 1-D thermal-hydraulics model with uniform or prescribed heat deposition
+        \item Static calibration factors may not be suitable for time-dependent simulations
       \end{itemize}
     \item Scaling the neutron source term to simulate moving control rods
       \cite{delpech_benchmark_2003, krepel_dyn3d-msr_2007, jaradat_development_2021,
