--- a/presentation/objectives.tex
+++ b/presentation/objectives.tex
@@ -12,6 +12,13 @@
         \item \textbf{Implement a RANS-based Turbulence Model in Moltres}
       \end{itemize}
       \item \textbf{Develop a Hybrid Neutronics Method for Control Rod Modeling in Moltres}
+      \begin{itemize}
+        \item \textbf{Develop and implement the hybrid $S_N$-diffusion method in Moltres}
+        \item \textbf{Verify the hybrid method against high-fidelity neutronics codes and MSRE
+          experimental data}
+        \item \textbf{Demonstrate a time-dependent reactivity-initiated simulation using the hybrid
+          method}
+      \end{itemize}
     \end{enumerate}
   \end{block}
 \end{frame}
