--- a/presentation/msre-transients.tex
+++ b/presentation/msre-transients.tex
@@ -2,22 +2,26 @@
   \frametitle{V\&V Study 2: MSRE Pump Start-up \& Coast-Down Transients}
   \textbf{Description of MSRE Pump Experiments}
   \begin{itemize}
-    \item Pump start-up and coast-down transient flow-rate tests on the MSRE under zero-power
-  conditions
     \item Starting from zero-power critical states with/without forced flow, the fuel salt pump
   was coasted down/started up
     \item Reactor was kept critical by a flux-servo controller moving the rod in response to flux
       changes
   \end{itemize}
+  \begin{block}{\textbf{MSR Phenomena Involved}}
+    \begin{itemize}
+      \item DNP drift under time-varying flow
+      \item Loss of delayed neutrons due to out-of-core DNP decay
+    \end{itemize}
+  \end{block}
   \begin{columns}
-    \column[t]{5.5cm}
+    \column{5.5cm}
     \begin{figure}
       \centering
       \includegraphics[width=.8\columnwidth]{images/msre-startup}
       \caption{MSRE start-up pump speed and flow rate experimental data
       \cite{prince_zero-power_1968}.}
     \end{figure}
-    \column[t]{5.5cm}
+    \column{5.5cm}
     \begin{figure}
       \centering
       \includegraphics[width=.95\columnwidth]{images/msre-coastdown}
@@ -54,16 +58,9 @@
   \frametitle{V\&V Study 2: MSRE Pump Start-up \& Coast-Down Transients}
   \begin{columns}
     \column{6.5cm}
-    \begin{block}{\textbf{MSR Phenomena Involved}}
-      \begin{itemize}
-        \item DNP drift under time-varying flow
-        \item Loss of delayed neutrons due to out-of-core DNP decay
-      \end{itemize}
-    \end{block}
     \begin{block}{\textbf{Aim of the Study}}
       \begin{itemize}
-         \item Develop a V\&V study based on the MSRE pump start-up \& coast-down
-           transients that is easily reproducible
+         \item Develop a V\&V study based on the MSRE pump transients
          \item Verify Moltres against QuasiMolto in collaboration with Aaron Reynolds
            (formerly at Oregon State University)
          \item Validate Moltres against MSRE experimental data for modeling \gls{DNP} drift
@@ -72,11 +69,9 @@
     \begin{block}{\textbf{Modeling Approach}}
       \begin{itemize}
         \item Two neutron energy groups and six DNP groups
-        \item Group constants generated using a representative unit cell model in SCALE
         \item Ignored upper and lower plena in the geometry
         \item Looped salt flow with a salt circulation time of 25.2 s
-        \item $k$-eigenvalue calculation at every time-step in place of reactivity control
-        \item Timestep size of 0.1 s
+        \item $k$-eigenvalue calculation at every time-step ($dt=0.1$ s) in place of reactivity control
       \end{itemize}
     \end{block}
     \column{4.5cm}
@@ -92,7 +87,7 @@
 
 \begin{frame}
   \frametitle{V\&V Study 2: MSRE Pump Start-up \& Coast-Down Transients}
-  \textbf{Static \& Steady-Flow Conditions}
+  \textbf{$k_\text{eff}$ Under Static \& Steady-Flow Conditions}
   \begin{table}[htb]
     \centering
     \caption{Multiplication factors $k_\text{eff}$ under static and steady salt flow conditions, and
@@ -109,7 +104,6 @@
     \end{tabular}
     \label{table:msre-pump-keff}
   \end{table}
-  
   \begin{itemize}
     \item Excellent agreement between Moltres and QuasiMolto under static and steady-flow conditions prior
   to the pump transients.
@@ -138,6 +132,9 @@
     \gls{MSRE} models under static conditions. Maximum relative difference $\approx 0.8 \%$.}
     \label{fig:centerline-flux}
   \end{figure}
+  \begin{itemize}
+    \item Perfect overlap in centerline and midplane neutron fluxes between Moltres and QuasiMolto.
+  \end{itemize}
 \end{frame}
 
 \begin{frame}
@@ -162,6 +159,9 @@
     Moltres models under static \gls{MSRE} conditions. Maximum relative difference $\approx 0.1 \%$.}
     \label{fig:centerline-pre}
   \end{figure}
+  \begin{itemize}
+    \item Perfect overlap in centerline and midplane DNP distributions between Moltres and QuasiMolto.
+  \end{itemize}
 \end{frame}
 
 \begin{frame}
@@ -233,16 +233,17 @@
 
 \begin{frame}
   \frametitle{V\&V Study 2: MSRE Pump Start-up \& Coast-Down Transients}
-  \textbf{Study Outcome}
-  \begin{itemize}
-    \item Moltres and QuasiMolto are highly consistent with each other in their looped DNP flow
-      modeling capabilities
-    \item Moltres and QuasiMolto reproduced key reactivity behavior in response to varying salt
-      flow velocities
-    \item Some discrepancies observed between the numerical and experimental results due to the
-      omission of upper and lower plena
-    \item This study can be used for verifying advection capabilities in other MSR simulation tools
-    \item The distinct oscillations serve as valuable reference points to facilitate code-to-code
-      comparisons
-  \end{itemize}
+  \begin{block}{\textbf{Study Outcome}}
+    \begin{itemize}
+      \item Moltres and QuasiMolto are highly consistent with each other in their looped DNP flow
+        modeling capabilities
+      \item Moltres and QuasiMolto reproduced key reactivity behavior in response to varying salt
+        flow velocities
+      \item Some discrepancies observed between the numerical and experimental results due to the
+        omission of upper and lower plena
+      \item This study can be used for verifying advection capabilities in other MSR simulation tools
+      \item The distinct oscillations serve as valuable reference points to facilitate code-to-code
+        comparisons
+    \end{itemize}
+  \end{block}
 \end{frame}
