--- a/presentation/turb-moltres.tex
+++ b/presentation/turb-moltres.tex
@@ -1,8 +1,8 @@
 \begin{frame}
   \frametitle{Spalart-Allmaras Turbulence Model in Moltres}
   \begin{block}{\textbf{Why the Spalart-Allmaras Model for Moltres?}}
-    A computationally efficient one-equation model that provides reasonable estimates for turbulent
-    effects in MSRs and is tractable for large problems on small computing clusters.
+    A computationally efficient one-equation model that provides reasonable estimates for wall-bounded
+    turbulent flows and is tractable for large problems on small computing clusters.
   \end{block}
   \begin{block}{\textbf{Subobjectives}}
     \textbf{Implementation of a Spalart-Allmaras turbulence model in Moltres}
@@ -104,10 +104,12 @@
       \label{fig:channel-stress}
     \end{subfigure}
     \caption{Comparison of turbulent channel flow results at Re$_\tau\approx395$ against reference
-    \gls{DNS} results \cite{moser_direct_1999}. The Moltres Spalart-Allmaras model agrees consistently with
-    the reference data.}
+    \gls{DNS} results \cite{moser_direct_1999}.}
     \label{fig:channel-verification}
   \end{figure}
+  \begin{itemize}
+    \item The Moltres Spalart-Allmaras model results are consistent with reference DNS channel flow data.
+  \end{itemize}
 \end{frame}
 
 \begin{frame}
@@ -137,6 +139,9 @@
     \caption{Comparison of turbulent pipe flow results at Re $\approx 40000$ against reference
     experimental data \cite{laufer_structure_1954}.}
     \label{fig:pipe-verification}
+  \begin{itemize}
+    \item The Moltres Spalart-Allmaras model results are consistent with reference experimental pipe flow data.
+  \end{itemize}
   \end{figure}
 \end{frame}
 
@@ -191,16 +196,22 @@
       \end{tabular}
       \label{table:bfs-reattach}
     \end{table}
+    \begin{itemize}
+      \item Moltres is consistent with experimental data (within uncertainty range) while CFL3D
+        falls outside the uncertainty range.
+    \end{itemize}
   \end{columns}
 \end{frame}
 
 \begin{frame}
   \frametitle{Spalart-Allmaras Turbulence Model in Moltres}
   \textbf{Backward-Facing Step Flow Validation Test Results}
+  \begin{columns}
+    \column{11cm}
   \begin{figure}[htb]
     \centering
     \hfill
-    \begin{subfigure}[b]{0.24\columnwidth}
+    \begin{subfigure}[t]{0.24\columnwidth}
       \centering
       \includegraphics[width=\columnwidth]{bfs_downstream_vel}
       \caption{Normalized velocity distributions downstream of step.}
@@ -208,21 +219,21 @@
     \end{subfigure} %\hfill \\
 %    \centering
     \hfill
-    \begin{subfigure}[b]{0.24\columnwidth}
+    \begin{subfigure}[t]{0.24\columnwidth}
       \centering
       \includegraphics[width=\columnwidth]{bfs_cf}
       \caption{Skin friction coefficient along the bottom wall.}
       \label{fig:bfs-cf}
     \end{subfigure}
     \hfill
-    \begin{subfigure}[b]{0.24\columnwidth}
+    \begin{subfigure}[t]{0.24\columnwidth}
       \centering
       \includegraphics[width=\columnwidth]{bfs_cp}
       \caption{Skin pressure coefficient along the bottom wall.}
       \label{fig:bfs-cp}
     \end{subfigure}% \hfill \\
 %    \centering
-    \begin{subfigure}[b]{0.24\columnwidth}
+    \begin{subfigure}[t]{0.24\columnwidth}
       \centering
       \includegraphics[width=\columnwidth]{bfs_stress}
       \caption{Normalized turbulent shear stress downstream
@@ -234,17 +245,19 @@
     distances relative to the step.}
     \label{fig:bfs-plots}
   \end{figure}
+\end{columns}
 \end{frame}
 
 \begin{frame}
   \frametitle{Spalart-Allmaras Turbulence Model in Moltres}
-  \textbf{Spalart-Allmaras Model V\&V Test Summary}
-  \begin{itemize}
-    \item Good agreement between Moltres and reference solutions in the turbulent channel and pipe
-      flow tests
-    \item Good agreement between Moltres and CFL3D in the backward-facing step flow test
-    \item Some discrepancy between Moltres and experimental data in the backward-facing step flow
-      test, but Moltres performed better than CFL3D at predicting flow reattachment length and
-      velocity/stress distributions along $x/H=1$.
-  \end{itemize}
+  \begin{block}{\textbf{Spalart-Allmaras Model V\&V Test Summary}}
+    \begin{itemize}
+      \item Good agreement between Moltres and reference solutions in the turbulent channel and pipe
+        flow tests
+      \item Good agreement between Moltres and CFL3D in the backward-facing step flow test
+      \item Some discrepancy between Moltres and experimental data in the backward-facing step flow
+        test, but Moltres performed better than CFL3D at predicting flow reattachment length and
+        velocity/stress distributions along $x/H=1$.
+    \end{itemize}
+  \end{block}
 \end{frame}
